# SerialDebugger

./: .gitignore  ANDROID_BUILD_GUIDE.md  ANDROID_FIX_DETAILS.md  ANDROID_TEST_CHECKLIST.md  BUG_FIXES.md  BUILD_ANDROID.md  BUILD_GUIDE.txt  BUILD_WASM.md  CHECK_ANDROID_DEVICE.md  CLONE_COMMIT_GUIDE.md  CLONE_TROUBLESHOOTING.md  CMakeLists.txt  Canvas空白问题修复.md  DEVICE_CHECK_SUMMARY.txt  FEATURES.md  FINAL_FIX_SUMMARY.md  FINAL_OPTIMIZATION.md  FINAL_SOLUTION.md  FIX_TOKEN_ISSUE.txt  GITHUB_ACTIONS_READY.txt  GITHUB_SETUP.md  ICON_INFO.md  LANGUAGE_CONFIG.md  LICENSE  OPTIMIZATION_SUMMARY.md  PUSH_NOW.txt  QUICK_FIX_SUMMARY.md  QUICK_START_GITHUB.md  Qt6迁移指南.md  Qt渲染问题诊断.md  README.md  README.txt  READY_TO_PUSH.md  START_HERE.txt  SerialDebugger.js  USER_GUIDE.md  WASM_BUILD_FIX.md  WASM_BUILD_FIX_FINAL.md  WASM_EMBIND_ISSUE.md  WASM_EMVAL_FIX.md  (+70 more)
.github/workflows/: android-build.yml  build-all.yml  wasm-build.yml
android/: AndroidManifest.xml
android/res/xml/: device_filter.xml
docs/: decrypt.bat
